--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>elenagm71</title>
+		<title>Elena González</title>
 	</head>
 	<body>
 		<noscript>Necesita tener habilitado Javascript para poder visualizar la web.</noscript>
